2009-08-05  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Client side image maps did not handle zoom correctly.
        Client side image maps did not handle border and padding correctly.

        * fast/images/image-map-zoom-expected.txt: Added.
        * fast/images/image-map-zoom.html: Added.

2009-08-05  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Win DRT's resource load delegate is missing didReceiveResponse
        https://bugs.webkit.org/show_bug.cgi?id=28033

        * platform/win/Skipped: 

2009-08-05  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Win DRT's resource load delegate is missing didReceiveResponse
        https://bugs.webkit.org/show_bug.cgi?id=28033

        * platform/win/Skipped: Remove a test that now passes
        
        Remove platform specific results for the XFrameOptions suite which now matches cross platform results:
        * platform/win/http/tests/security: Removed.
        * platform/win/http/tests/security/XFrameOptions: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-expected.txt: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-in-body-expected.txt: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-allow-expected.txt: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-deny-expected.txt: Removed.
        * platform/win/http/tests/security/XFrameOptions/x-frame-options-parent-same-origin-allow-expected.txt: Removed.

2009-08-05  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Mark Rowe.

        As a followup to http://trac.webkit.org/changeset/46811, Windows-specific results *did* have some differences, so restoring those results.
