@@ -3,6 +3,7 @@ Test WorkerContext.close functionality. Should print a series of PASS messages, 
 PASS: typeof close: function
 PASS: received message before close
 PASS: messages sent after close() are ignored
+PASS: Error arrived after close: ReferenceError: Can't find variable: nonExistentFunction
 PASS: close() did not dispatch pending events
 DONE
 
