@@ -1,3 +1,14 @@
+2009-08-05  Drew Wilson  <atwilson@google.com>
+
+        Reviewed by David Levin.
+
+        Need to test throwing exceptions from Workers after calling close().
+        https://bugs.webkit.org/show_bug.cgi?id=27924
+
+        * fast/workers/resources/worker-close.js:
+        * fast/workers/worker-close-expected.txt:
+        * fast/workers/worker-close.html:
+
 2009-08-05  Darin Adler  <darin@apple.com>
 
         Reviewed by Dan Bernstein.
